--- a/examples/showCases/partialBounceBack/CMakeLists.txt
+++ b/examples/showCases/partialBounceBack/CMakeLists.txt
@@ -8,7 +8,7 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
 ###############################################################################
 
 get_filename_component(PROJECT_NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
-add_executable(${PROJECT_NAME} "./${EXECUTABLE_NAME}.cpp")
+add_executable(${PROJECT_NAME} "./fibrinolysis.cpp")
 
 # Link with the following libraries
 target_link_libraries(${PROJECT_NAME} palabos)
