--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -141,6 +141,7 @@ add_subdirectory(examples/showCases/externalFlowAroundObstacle)
 add_subdirectory(examples/showCases/generalExternalFlow)
 add_subdirectory(examples/showCases/gridRefinement2d)
 add_subdirectory(examples/showCases/gridRefinement3d)
+add_subdirectory(examples/showCases/isothermCoVo2d)
 add_subdirectory(examples/showCases/heatedObjectInChannel)
 add_subdirectory(examples/showCases/movingWall)
 add_subdirectory(examples/showCases/multiComponent2d)
